Fix bug #33994 fix the problem: Time selecter is covered by search box on narrow page

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -500,7 +500,7 @@ border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 
 .schedule-filter-component {
 	margin: 8px 0;
-	z-index: 150;
+	/*z-index: 150; */
 }
 .btn.dropdown-toggle {
 	width: 100%;
